--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
         </nav>
     </div>
     </header>
-    <main>
-
+    <main aria-label="main"> 
+        <section class="home" aria-label="home section">
+            <div class="container">
+                <h1 class="home-title">Ivan Constantinovich Aivazovski</h1>
+                <p class="home-description" aria-label="description">Russian marine painter of Armenian origin, collector, philanthropist</p>
+                <img src="assets/webp/Home.webp" alt="photo of Aivazovski" class="home-img">
+            </div>
+        </section>
     </main>
  
    <footer></footer>
