--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <nav class="nav" aria-label="header navigation">
             <ul class="nav-list" aria-label="header navigation list">
                 <li>
-                    <a href="#" class="nav-link" aria-label="link to home">Home</a>
+                    <a href="#home-id" class="nav-link" aria-label="link to home">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link" aria-label="link to about">About</a>
+                    <a href="#about-id" class="nav-link" aria-label="link to about">About</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link" aria-label="link to history">History</a>
+                    <a href="#history-id" class="nav-link" aria-label="link to history">History</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link" aria-label="link to portfolio">Portfolio</a>
+                    <a href="#portfolio-id" class="nav-link" aria-label="link to portfolio">Portfolio</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link" aria-label="link to contacts">Contacts</a>
@@ -40,7 +40,7 @@
     </div>
     </header>
     <main aria-label="main"> 
-        <section class="home" aria-label="home section">
+        <section class="home" aria-label="home section" id="home-id">
             <div class="container">
                 <h1 class="home-title">Ivan Constantinovich Aivazovski</h1>
                 <p class="home-description" aria-label="description">Russian marine painter of Armenian origin, collector, philanthropist</p>
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <section class="about" aria-label="about section">
+        <section class="about" aria-label="about section" id="about-id">
             <div class="container">
                     <h2 class="about-title" aria-label="about title">About</h2>
                     <h3 class="about-subtitle-ru"  aria-label="about subtitle ru">Ива́н Константи́нович Айвазо́вский – русский 
@@ -62,16 +62,62 @@
             </div>
         </section>
 
-        <section class="history-section" aria-label="history section">
+        <section class="history-section" aria-label="history section" id="history-id">
             <div class="container">
                 <h2 class="history-title">History</h2>
                 <img src="assets/webp/History.webp" alt="house of Aivazovski" class="history-photo">
                 <p class="history-description" aria-label="history description">Дом в котором родился Айвазовский | The house where Aivazovsky was born </p>
             </div>
         </section>
+
+        <section class="portfolio" aria-label="portfolio" id="portfolio-id">
+            <div class="container">
+                <h2 class="portfolio-title">Portfolio</h2>
+                <img src="assets/webp/Portfolio_1.webp" alt="Winter wagon train on the way" class="portfolio-picture">
+                <p class="portfolio-description" aria-label="picture 1 description">Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857</p>
+
+                <img src="assets/webp/Portfolio_2.webp" alt="Rainbow" class="portfolio-picture">
+                <p class="portfolio-description" aria-label="picture 2 description">Радуга, 1873 г. | Rainbow, 1873</p>
+
+                <img src="assets/webp/Portfolio_3.webp" alt="Gulf of Naples in the morning" class="portfolio-picture">
+                <p class="portfolio-description" aria-label="picture 3 description">Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning, 1893</p>
+            </div>
+        </section>
     </main>
  
-   <footer></footer>
+   <footer class="contacts" aria-label="contacts section" id="contacts-id">
+        <div class="container">
+           <h2 class="contacts-title" aria-label="">Contacts</h2>
+           <button class="contacts-button">
+            <a href="https://ayvazovskiy.su" class="button-link">ayvazovskiy.su</a>
+           </button>
+
+           <address class="socials" aria-label="social-icons">
+                <a href="https://youtube.com" target="_blank" aria-label="link to youtube">
+                    <svg class="social-icon" aria-label="youtube icon">
+                        <use href="assets/sprites.svg#youtube-icon"></use>
+                    </svg>
+                </a>
+                <a href="https://linkedin.com" target="_blank" aria-label="link to linkedin">
+                    <svg class="social-icon" aria-label="linkedin icon">
+                        <use href="assets/sprites.svg#linkedin-icon"></use>
+                    </svg>
+                </a>
+                <a href="https://instagram.com" target="_blank" aria-label="link to instagram">
+                    <svg class="social-icon" aria-label="instagram icon">
+                        <use href="assets/sprites.svg#instagram-icon"></use>
+                    </svg>
+                </a>
+                <a href="https://facebook.com" target="_blank" aria-label="link to facebook">
+                    <svg class="social-icon" aria-label="facebook icon">
+                        <use href="assets/sprites.svg#facebook-icon"></use>
+                    </svg>
+                </a>
+           </address>
+           <p class="contact-info">More works you can see in these social networks</p>
+        </div>
+
+   </footer>
 </body>
 
 </html>
